code review fixes

--- a/src/components/Dialog/__stories__/Dialog.stories.mdx
+++ b/src/components/Dialog/__stories__/Dialog.stories.mdx
@@ -534,11 +534,11 @@ Manage the open and close state of the dialog. Note that `isOpen` is used and `s
   </Story>
 </Canvas>
 
-<Tip title="Devs tip">
+<Tip title="Dev tip">
   If you wish to implement a dropdown inside a Dialog container and need help displaying the dropdown's popovers
   correctly, read more about our dropdown in popovers technical pattern
   <Link
-    href="?path=/docs/technical-patterns-dropdowns-inside-pop-overs--modal-with-damaged-dropdown"
+    href="/?path=/docs/technical-patterns-dropdowns-inside-pop-overs--modal-with-damaged-dropdown"
     size={Link.sizes.SMALL}
   >
     here
