--- a/src/components/Dropdown/__stories__/dropdown.stories.mdx
+++ b/src/components/Dropdown/__stories__/dropdown.stories.mdx
@@ -698,7 +698,7 @@ with overflow hidden content which use CSS transform function.
 <Tip title="Devs tip">
   For more details about dropdown's APIs for displaying correctly inside Dialogs, Modals and other popovers
   <Link
-    href="?path=/docs/technical-patterns-dropdowns-inside-pop-overs--modal-with-damaged-dropdown"
+    href="/?path=/docs/technical-patterns-dropdowns-inside-pop-overs--modal-with-damaged-dropdown"
     size={Link.sizes.SMALL}
   >
     press here
