--- a/src/components/IconButton/__stories__/IconButton.stories.mdx
+++ b/src/components/IconButton/__stories__/IconButton.stories.mdx
@@ -307,7 +307,7 @@ Set disable button for something that isn’t usable. Use a tooltip on hover in 
           <Flex gap={Flex.gaps.XS}>
             <Link withoutSpacing>Hadas Farhi</Link>
             <span>deleted the item </span>
-            <Text element="span" weight="bold" className={classes.recycleBinItemName}>
+            <Text element="span" weight="bold">
               Hello World
             </Text>
             <span>from the board</span>
