--- a/src/components/Modal/__stories__/modal.stories.mdx
+++ b/src/components/Modal/__stories__/modal.stories.mdx
@@ -12,10 +12,9 @@ import {
 } from "../../../storybook/components/related-components/component-description-map";
 import Modal from "../Modal";
 import { DialogAsModalBadExample, ModalExampleWrapper, useHelperOpenModalButton } from "./helpers";
-import { Button, Flex, EditableHeading } from "../../../components";
+import { EditableHeading } from "../../../components";
 import ModalFooterButtons from "../ModalFooter/ModalFooterButtons/ModalFooterButtons";
 import { Upgrade } from "../../Icon/Icons";
-import "./Modal.stories.scss";
 
 export const metaSettings = createStoryMetaSettingsDecorator({
   component: Modal,
