fix link styles

--- a/src/components/Modal/__stories__/modal.stories.mdx
+++ b/src/components/Modal/__stories__/modal.stories.mdx
@@ -110,10 +110,11 @@ Use modal for short and non-frequent tasks. For common tasks consider using the 
   not by ESC or by clicking outside.
 </Tip>
 <Tip>
-  For creating a popover positioned next to other components, like customized menus, check out our
-  <Link hredf="/?path=/docs/components-dialog-dialog--overview" size={Link.sizes.SMALL}>
+  For creating a popover positioned next to other components, like customized menus, check out our{" "}
+  <Link hredf="/?path=/docs/components-dialog-dialog--overview" size={Link.sizes.SMALL} withoutSpacing>
     Dialog
-  </Link> component.
+  </Link>{" "}
+  component.
 </Tip>
 
 ## Variants
@@ -364,13 +365,14 @@ clicking outside. Use this variant in case of sensitive or important messages, a
 
 <Tip title="Dev tip">
   If you wish to implement a dropdown inside a Modal container and need help displaying the dropdown's popovers
-  correctly, read more about our dropdown in popovers technical pattern
+  correctly, read more about our dropdown in popovers technical pattern{" "}
   <Link
+    withoutSpacing
     href="/?path=/docs/technical-patterns-dropdowns-inside-pop-overs--modal-with-damaged-dropdown"
     size={Link.sizes.SMALL}
   >
-    here
-  </Link>.
+    here.
+  </Link>
 </Tip>
 
 ## Use cases and examples
