fix link to demo

--- a/src/storybook/patterns/dropdown-in-modals/dropdown-in-modals.stories.mdx
+++ b/src/storybook/patterns/dropdown-in-modals/dropdown-in-modals.stories.mdx
@@ -64,7 +64,7 @@ We implemented few methods for solving this issue.
 
 ## insideOverflowContainer prop
 
-To handle straightforward scenarios of displaying dropdowns inside a container with **relevant overflow styles**, you can utilize our dropdown's <code>insideOverflowContainer</code> prop.
+To handle straightforward scenarios of displaying dropdowns inside a container with relevant overflow styles, you can utilize our dropdown's <code>insideOverflowContainer</code> prop.
 This prop overrides the dropdown menu's default settings and ensures proper display within the container.
 **This solution will work for most cases single select dropdown inside Vibe's Modal or DialogContentContainer, it will not work for Vibe's Dialog.**
 
