--- a/src/storybook/patterns/dropdown-in-modals/dropdown-in-modals.stories.mdx
+++ b/src/storybook/patterns/dropdown-in-modals/dropdown-in-modals.stories.mdx
@@ -177,55 +177,7 @@ To implement this solution and ensure proper display of all dropdown popovers, y
 <!--- We are hiding the story from the docs block becasue it's not working well in this view because of the way stories render there -->
 
 This solution can be useful for multiselection dropdown with single line state, which contains multiple popovers (one for the dropdown menu and one for the selections which hidden under the counter).
-If you have defined the dropdown's popovers container styles as required, you can use it as demonstrated in the following example <Link href="/?path=/story/technical-patterns-display-dropdowns-inside-pop-overs--popups-container-selector" withoutSpacing>(click here for a live demo)</Link>
-
-<Canvas className={styles.hideStory}>
-  <Story name="popupsContainerSelector">
-    {() => {
-      const [show, setShow] = useState(false);
-      const closeModal = useCallback(() => {
-        setShow(false);
-      }, [setShow]);
-      const options = [
-        { value: 1, label: "Option 1" },
-        { value: 2, label: "Option 2" },
-        { value: 3, label: "Option 3" },
-        { value: 4, label: "Option 4" },
-        { value: 5, label: "Option 5" },
-        { value: 6, label: "Option 6" },
-        { value: 7, label: "Option 7" },
-        { value: 8, label: "Option 8" },
-        { value: 9, label: "Option 9" },
-        { value: 10, label: "Option 10" },
-        { value: 11, label: "Option 11" },
-        { value: 12, label: "Option 12" }
-      ];
-      return (
-        <div>
-          <div
-            id="popovers-container"
-            style={{
-              position: "fixed",
-              width: "100%",
-              pointerEvents: "none",
-              zIndex: 99999,
-              height: "100%",
-              top: 0,
-              right: 0
-            }}
-            className={styles.pointerEventsAutoToAllChildren}
-          />
-          <OpenModalButton setShow={setShow} />
-          <Modal id="modal-with-multiple-choice" title="Modal with dropdown" show={show} onClose={closeModal}>
-            <ModalContent>
-              <Dropdown multi options={options} popupsContainerSelector="#popovers-container" />
-            </ModalContent>
-          </Modal>
-        </div>
-      );
-    }}
-  </Story>
-</Canvas>
+If you have defined the dropdown's popovers container styles as required, you can use it as demonstrated in the following example:
 
 ```jsx
 <div>
