--- a/src/components/TextField/__stories__/TextField.stories.mdx
+++ b/src/components/TextField/__stories__/TextField.stories.mdx
@@ -3,7 +3,7 @@ import TextField from "../TextField";
 import { TextFieldTextType } from "../TextFieldConstants";
 import { createStoryMetaSettingsDecorator } from "../../../storybook";
 import { ComponentRules, createComponentTemplate, UsageGuidelines } from "vibe-storybook-components";
-import { Clear, Check, CloseSmall, Email, Show } from "../../Icon/Icons";
+import { Check, CloseSmall, Email, Show } from "../../Icon/Icons";
 import { COMBOBOX, DROPDOWN, SEARCH } from "../../../storybook/components/related-components/component-description-map";
 import "./TextField.stories.scss";
 
